hphp/test/slow/object/const/const_with_non_const_parent.php.expectf
Fatal error: Classes, interfaces, traits and enums may not be declared `__Const` in %s/const_with_non_const_parent.php on line 4
